@@ -1,0 +1,22 @@
+.calendarbox { margin:5px auto; font-size:11px; width:16em; text-align:center; background:white; position:relative; }
+.calendar { margin:0; padding: 0; }
+.calendar table { margin:0; padding:0; border-collapse:collapse; background:white; width:99%; }
+.calendar td { font-size:13px; text-align: center; padding: 0; border-top:1px solid #eee; border-bottom:none; }
+.calendar td.selected a { background: #99DBED; }
+.calendar-day-cell, .calendar-blank-cell { background:#C9DBED; }
+.calendar-cell-today { background:green; }
+.calendar-today-link { display: block; font-size: 10px; font-weight:bold; padding:0px; text-decoration: none; color:#444; }
+
+.calendar td.calendar-day-cell:hover, .calendar-today-link a:hover { background: #5b80b2; color:white; }
+.calendar td.today:hover, .calendar-today-link a:hover , div a:hover { background: #5b80b2; color:white; }
+div.calendar-top-panel a:hover { background: #5b80b2; color:white; }
+.calendar td:active, .calendar-today-link a:active { background: #036; color:white; }
+
+.calendar .calendar-shortcuts { font-weight: bold; font-size:14px; }
+.calendar .calendar-top-panel { font-weight: bold; font-size:14px;}
+.calendar .calendar-center { font-weight: bold; font-size:14px; color:#000; }
+
+.calendar-cancel { margin:0 !important; padding:0; font-size:12px; font-weight: bold; background:#fde; color:#000;  border-top:1px solid #ddd; }
+.calendar-cancel a:hover  { background:#5b80b2; color:white; }
+.calendar-module { margin:0; padding:2px 5px 3px 5px; font-size:11px; text-align:left; font-weight:bold; background:#bcd; color:#fff; }
+.calendar td.calendar-header { margin: 0; background:#ccffee; font-weight: bold; font-size:12px; text-align:center; border-top:1px solid #ddd; border-bottom:1px solid #ddd }
