@@ -1,0 +1,10 @@
+﻿<html>
+    <head>
+        <meta name="pygwt:module" content="DateField">
+        <link rel='stylesheet' href='DateField.css'>
+        <title>Calendar Example</title>
+    </head>
+    <body bgcolor="white">
+        <script language="javascript" src="bootstrap.js"></script>
+    </body>
+</html>
