@@ -1,6 +1,8 @@
                     Changes made to Pyjamas since 0.5p1
                     -----------------------------------
 
+ * Yi Choong contributed a DateField widget, and example - thank you!
+
  * Local variables (in functions/methods) are now declared at the
    head of the function/method
 
